@@ -21,11 +21,6 @@
 from __future__ import print_function
 from future import standard_library
 standard_library.install_aliases()
-from builtins import filter
-from builtins import map
-from builtins import next
-from builtins import object
-from builtins import range
 
 import os
 import sys
