@@ -19,6 +19,9 @@
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
 from __future__ import print_function
+from future import standard_library
+standard_library.install_aliases()
+
 import os
 import sys
 import subprocess
